tests/should_fail/type_negate_non_numeric.nv
module type_negate_non_numeric
// SHOULD FAIL: cannot negate a string
let x = -"hello"
